# jsonfixer4j

./: README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
jsonfixer4j/src/: Main.java
jsonfixer4j/src/com/github/dedinc/jsonfixer4j/: JSONFixerRust.java
jsonfixer_rust/: Cargo.toml
jsonfixer_rust/src/: autocorrector.rs  lib.rs  parser.rs  serializer.rs  token.rs  token_fixer.rs  tokenizer.rs
src/main/java/com/github/dedinc/jsonfixer4j/: JSONAutoCorrector.java  JSONParser.java  JSONSerializer.java  JSONTokenFixer.java  JSONTokenizer.java  Token.java  TokenKind.java
