[package]
name = "jsonfixer_rust"
version = "0.1.0"
edition = "2021"
authors = ["DedInc"]
description = "A Rust implementation of jsonfixer4j with JNI bindings"
license = "MIT"

[lib]
name = "jsonfixer_rust"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10.2"
once_cell = "1.18.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
